monitoring/manifests/expose/alertmanager-oauth-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
  name: alertmanager-oauth2-proxy
  namespace: oauth2-proxy
spec:
  rules:
  - host: alertmanager.test-infra.ouzi.io
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: http
        path: /oauth2
  tls:
  - hosts:
    - alertmanager.test-infra.ouzi.io
    secretName: wildcard-test-infra-tls
