monitoring/manifests/expose/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
  name: prometheus
  namespace: monitoring
spec:
  rules:
  - host: prometheus.test-infra.ouzi.io
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: web
        path: /
  tls:
  - hosts:
    - prometheus.test-infra.ouzi.io
    secretName: wildcard-test-infra-tls
